Fixed missing color in table

--- a/css/style.css
+++ b/css/style.css
@@ -117,10 +117,10 @@ a:hover{
 .bg-abt:hover{
     background-color: rgb(190, 159, 119);
 }
-.bg-mediumpurple{
+.bg-fitBall{
     background-color: mediumpurple;
 }
-.bg-mediumpurple:hover{
+.bg-fitBall:hover{
     background-color: rgb(118, 91, 173);
 }
 .bg-powerBike{
